fixed deleted gaps after formatting

--- a/components/elements/title-lvl-three/styles.css
+++ b/components/elements/title-lvl-three/styles.css
@@ -3,6 +3,6 @@
 }
 
 /* Otherwise margin not respected, don't know why */
-.title-lvl-three-container {
+/* .title-lvl-three-container {
     display: flex;
-}
+} */
